Fix filename overflow

--- a/client/src/app/+videos-publish-manage/shared-manage/captions/video-caption-add-modal.component.scss
+++ b/client/src/app/+videos-publish-manage/shared-manage/captions/video-caption-add-modal.component.scss
@@ -1,13 +1,8 @@
-@use '_variables' as *;
-@use '_mixins' as *;
+@use "_variables" as *;
+@use "_mixins" as *;
 
 .caption-file {
   margin-top: 20px;
-  width: max-content;
-
-  ::ng-deep .root {
-    width: max-content;
-  }
 }
 
 .warning-replace-caption {
